--- a/index.html
+++ b/index.html
@@ -3,17 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title>Maxime Fourna</title>
-    <link rel="stylesheet" href="/scss/global.css">
+    <link rel="stylesheet" href="scss/global.css">
 </head>
 <body>
     <header>
-        <svg id="hamburger-menu" xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 24 24"><path d="M24 6h-24v-4h24v4zm0 4h-24v4h24v-4zm0 8h-24v4h24v-4z"/></svg>
+        <svg id="hamburger-btn" xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 24 24"><path d="M24 6h-24v-4h24v4zm0 4h-24v4h24v-4zm0 8h-24v4h24v-4z"/></svg>
+        <div id="hamburger-menu">
+            <h2>Hello!</h2>
+            <hr>
+            <div >
+                <a class="text-link" href="">Accueil</a>
+                <a class="text-link" href="">My Projects</a>
+                <a class="text-link" href="">About Me</a>
+                <a class="text-link" href="">Contact</a>
+            </div>
+            <div><a href="#">🇬🇧 English</a><a href="#">🇫🇷 Français</a></div>
+        </div>
     </header>
-    <div>
+    <div class="container">
         <h1>Maxime<br>Fourna.</h1>
-        <h2>UI/UX Designer | Front-End Web Developer</h2>
-        <h3>sample text</h3>
-        <h4>sample text</h4>
+        <h4>UI/UX Designer | Front-End Web Developer.<br>Based in France.</h4>
     </div>
+    <footer>
+        <div id="footer-link-container"><a class="text-link" href="">Home</a><a class="text-link" href="">My Projects</a><a class="text-link" href="">About Me</a><a class="text-link" href="">Contact</a></div>
+        <div id="social-container">
+            <h3>Follow Me!</h3>
+            <div id="social-links-container">
+                <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/></svg></a>
+                <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24"><path d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z"/></svg></a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
