added files updated html, css

--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
     <header>
         <svg id="hamburger-btn" xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 24 24"><path d="M24 6h-24v-4h24v4zm0 4h-24v4h24v-4zm0 8h-24v4h24v-4z"/></svg>
         <div id="hamburger-menu">
-            <h2>Hello!</h2>
-            <hr>
-            <div >
-                <a class="text-link" href="">Accueil</a>
-                <a class="text-link" href="">My Projects</a>
-                <a class="text-link" href="">About Me</a>
-                <a class="text-link" href="">Contact</a>
+            <div id="hamburger-menu-content">
+                <div id="title-separator">
+                    <h2>Hello!</h2>
+                    <hr>
+                </div>
+                <div id="hamburger-menu-links">
+                    <a class="text-link" href="">Accueil</a>
+                    <a class="text-link" href="">My Projects</a>
+                    <a class="text-link" href="">About Me</a>
+                    <a class="text-link" href="">Contact</a>
+                </div>
+                <div id="language-switch-container"><a class="grey-btn" href="#">🇬🇧 English</a><a class="grey-btn" href="#">🇫🇷 Français</a></div>
             </div>
-            <div><a href="#">🇬🇧 English</a><a href="#">🇫🇷 Français</a></div>
         </div>
     </header>
     <div class="container">
